# simplepp

./: CMakeLists.txt  FileStack.cpp  FileStack.h  README.md  main.cpp
gtest/: test1.cpp
testsuite/: 1.inc  2.inc  a.txt
